[package]
name = "rust_datastructures_and_algos"
version = "0.1.0"
authors = ["Arun Manivannan <arun@arunma.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=["leetcode"]

[dependencies]
leetcode = {path = "./leetcode"}